--- a/css/elements.css
+++ b/css/elements.css
@@ -707,12 +707,12 @@ body.loaded .img-stack img {
 }
 
 .img-grid .item .caption {
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
     text-align: center;
-    padding: 0 0 10px;
+    padding: 25px 0 10px;
     font-size: 1.2em
 }
 
